force-app/main/default/objects/AccountConditions__c/AccountConditions__c.object-meta.xml
<CustomObject>
    <label>Account Condition</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Account Conditions	Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>