force-app/main/default/objects/AccountConditions__c/fields/AdvertisingSubsidyRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>AdvertisingSubsidyRightAuthority__c</fullName>
    <description>Authority of the advertising-subsidy right; display only, never written by the click cycle.</description>
    <label>Advertising Subsidy Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>