force-app/main/default/objects/AccountConditions__c/fields/AdvertisingSubsidyRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>AdvertisingSubsidyRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Causer of the advertising-subsidy lock; blank while the own state applies.</description>
    <label>Advertising Subsidy Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Advertising Subsidy Right Capped By)</relationshipLabel>
    <relationshipName>AdvertisingSubsidyRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>