force-app/main/default/objects/AccountConditions__c/fields/ApplicableAccount__c.field-meta.xml
<CustomField>
    <fullName>ApplicableAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicable Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions</relationshipLabel>
    <relationshipName>Account_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>