force-app/main/default/objects/AccountConditions__c/fields/AssCocoaCount__c.field-meta.xml
<CustomField>
    <fullName>AssCocoaCount__c</fullName>
    <label>Assortment Cocoa Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>