force-app/main/default/objects/AccountConditions__c/fields/AssCocoaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssCocoaDiscountPct__c</fullName>
    <label>Assortment Cocoa Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>