force-app/main/default/objects/AccountConditions__c/fields/AssOtherDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssOtherDiscountPct__c</fullName>
    <label>Assortment Other Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>