force-app/main/default/objects/AccountConditions__c/fields/AssOtherProductsCount__c.field-meta.xml
<CustomField>
    <fullName>AssOtherProductsCount__c</fullName>
    <label>Assortment Other Products Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>