force-app/main/default/objects/AccountConditions__c/fields/AssRoastedCoffeeCount__c.field-meta.xml
<CustomField>
    <fullName>AssRoastedCoffeeCount__c</fullName>
    <label>Assortment Roasted Coffee Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>