force-app/main/default/objects/AccountConditions__c/fields/AssRoastedCoffeeDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssRoastedCoffeeDiscountPct__c</fullName>
    <label>Assortment Roasted Coffee Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>