force-app/main/default/objects/AccountConditions__c/fields/AssTeaCount__c.field-meta.xml
<CustomField>
    <fullName>AssTeaCount__c</fullName>
    <label>Assortment Tea Count</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>