force-app/main/default/objects/AccountConditions__c/fields/AssTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>AssTeaDiscountPct__c</fullName>
    <label>Assortment Tea Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>