force-app/main/default/objects/AccountConditions__c/fields/BrandVisibilityDiscountLocation__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityDiscountLocation__c</fullName>
    <label>Brand Visibility Discount – Location (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>