force-app/main/default/objects/AccountConditions__c/fields/BrandVisibilityDiscountMenu__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityDiscountMenu__c</fullName>
    <label>Brand Visibility Discount – Menu (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>