force-app/main/default/objects/AccountConditions__c/fields/BrandVisibilityDiscountTable__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityDiscountTable__c</fullName>
    <label>Brand Visibility Discount – Table (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>