force-app/main/default/objects/AccountConditions__c/fields/BrandVisibilityLocation__c.field-meta.xml
<CustomField>
    <fullName>BrandVisibilityLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brand Visibility Location</label>
    <type>Checkbox</type>
</CustomField>