force-app/main/default/objects/AccountConditions__c/fields/CashDiscount__c.field-meta.xml
<CustomField>
    <fullName>CashDiscount__c</fullName>
    <label>Cash Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>