force-app/main/default/objects/AccountConditions__c/fields/CashDiscountType__c.field-meta.xml
<CustomField>
    <fullName>CashDiscountType__c</fullName>
    <label>Cash Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>0-10 days</fullName>
            </value>
            <value>
                <fullName>&gt;10 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>