force-app/main/default/objects/AccountConditions__c/fields/ConditionChainParent__c.field-meta.xml
<CustomField>
    <fullName>ConditionChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct parent account in the condition chain for this Applicable Account. Used as the immediate inheritance level (not necessarily the Head of Chain).</description>
    <label>Condition Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Condition Chain Childs</relationshipLabel>
    <relationshipName>ConditionChainChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>