force-app/main/default/objects/AccountConditions__c/fields/ConditionRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>ConditionRightAuthority__c</fullName>
    <description>Authority of the condition right; display only, never written by the click cycle.</description>
    <label>Condition Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>