force-app/main/default/objects/AccountConditions__c/fields/ConditionRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>ConditionRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Causer of the condition lock; blank while the own state applies.</description>
    <label>Condition Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Condition Right Capped By)</relationshipLabel>
    <relationshipName>ConditionRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>