force-app/main/default/objects/AccountConditions__c/fields/HeadOfConditionChainConditions__c.field-meta.xml
<CustomField>
    <fullName>HeadOfConditionChainConditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Of Condition Chain Conditions</label>
    <referenceTo>AccountConditions__c</referenceTo>
    <relationshipLabel>Condition Chain Children</relationshipLabel>
    <relationshipName>ConditionChainChildren</relationshipName>
    <type>Lookup</type>
</CustomField>