force-app/main/default/objects/AccountConditions__c/fields/HeadOfConditionChainParent__c.field-meta.xml
<CustomField>
    <fullName>HeadOfConditionChainParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head Of Condition Chain Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Head Of Condition Chain Parent)</relationshipLabel>
    <relationshipName>Condition_Childs</relationshipName>
    <type>Lookup</type>
</CustomField>