force-app/main/default/objects/AccountConditions__c/fields/IndexationRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>IndexationRightAuthority__c</fullName>
    <description>Authority of the indexation right; display only, never written by the click cycle.</description>
    <label>Indexation Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>