force-app/main/default/objects/AccountConditions__c/fields/IndexationRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>IndexationRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Causer of the indexation lock — within a chain below the head always the chain head; blank while the own state applies.</description>
    <label>Indexation Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Indexation Right Capped By)</relationshipLabel>
    <relationshipName>IndexationRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>