force-app/main/default/objects/AccountConditions__c/fields/IndexDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>IndexDiscountPct__c</fullName>
    <label>Index Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>