force-app/main/default/objects/AccountConditions__c/fields/InhAdvertisingSubsidyRightState__c.field-meta.xml
<CustomField>
    <fullName>InhAdvertisingSubsidyRightState__c</fullName>
    <description>Advertising subsidy (WKZ), effective state — materialized; read-only for users.</description>
    <label>Advertising Subsidy Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>