force-app/main/default/objects/AccountConditions__c/fields/InhBaseCocaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InhBaseCocaDiscountPct__c</fullName>
    <label>Inh. Base Discount Cocoa (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>