force-app/main/default/objects/AccountConditions__c/fields/InhBaseDiscountRoastedCoffee__c.field-meta.xml
<CustomField>
    <fullName>InhBaseDiscountRoastedCoffee__c</fullName>
    <label>Inh. Base Discount Roasted Coffee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>