force-app/main/default/objects/AccountConditions__c/fields/InhBaseOtherArticlesDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InhBaseOtherArticlesDiscountPct__c</fullName>
    <label>Inh. Base Discount Other (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>