force-app/main/default/objects/AccountConditions__c/fields/InhBaseTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InhBaseTeaDiscountPct__c</fullName>
    <label>Inh. Base Discount Tea (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>