force-app/main/default/objects/AccountConditions__c/fields/InhConditionRightState__c.field-meta.xml
<CustomField>
    <fullName>InhConditionRightState__c</fullName>
    <description>Condition, effective state — materialized; read-only for users.</description>
    <label>Condition Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>