force-app/main/default/objects/AccountConditions__c/fields/InhIndexationRightState__c.field-meta.xml
<CustomField>
    <fullName>InhIndexationRightState__c</fullName>
    <description>Indexation, effective state — below the chain head always NotPermitted.</description>
    <label>Indexation Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>