force-app/main/default/objects/AccountConditions__c/fields/InhListingRightState__c.field-meta.xml
<CustomField>
    <fullName>InhListingRightState__c</fullName>
    <description>Listing, effective state — materialized by the controller on save; never edit manually.</description>
    <label>Listing Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>