force-app/main/default/objects/AccountConditions__c/fields/InhRebateRightState__c.field-meta.xml
<CustomField>
    <fullName>InhRebateRightState__c</fullName>
    <description>Rebate, effective state — materialized; read-only for users.</description>
    <label>Rebate Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>