force-app/main/default/objects/AccountConditions__c/fields/InhSamplingRightState__c.field-meta.xml
<CustomField>
    <fullName>InhSamplingRightState__c</fullName>
    <description>Sampling, effective state — materialized; on department sheets it mirrors the parent&apos;s sampling state.</description>
    <label>Sampling Right (Effective)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightStateEffective</valueSetName>
    </valueSet>
</CustomField>