force-app/main/default/objects/AccountConditions__c/fields/InhVolumeCocoaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeCocoaDiscountPct__c</fullName>
    <label>Inh. Volume Cocoa Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>