force-app/main/default/objects/AccountConditions__c/fields/InhVolumeCocoaQty__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeCocoaQty__c</fullName>
    <label>Inh. Volume Cocoa (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>