force-app/main/default/objects/AccountConditions__c/fields/InhVolumeOtherProductsDiscount__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeOtherProductsDiscount__c</fullName>
    <label>Inh. Volume Other Products Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>