force-app/main/default/objects/AccountConditions__c/fields/InhVolumeOtherProductsQty__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeOtherProductsQty__c</fullName>
    <label>Inh. Volume Other Products (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>