force-app/main/default/objects/AccountConditions__c/fields/InhVolumeRoastedCoffeeDiscount__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeRoastedCoffeeDiscount__c</fullName>
    <label>Inh. Volume Roasted Coffee Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>