force-app/main/default/objects/AccountConditions__c/fields/InhVolumeRoastedCoffeeQty__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeRoastedCoffeeQty__c</fullName>
    <label>Inh. Volume Roasted Coffee (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>