force-app/main/default/objects/AccountConditions__c/fields/InhVolumeTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeTeaDiscountPct__c</fullName>
    <label>Inh. Volume Tea Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>