force-app/main/default/objects/AccountConditions__c/fields/InhVolumeTeaQty__c.field-meta.xml
<CustomField>
    <fullName>InhVolumeTeaQty__c</fullName>
    <label>Inh. Volume Tea (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>