force-app/main/default/objects/AccountConditions__c/fields/InitiatingOpportunity__c.field-meta.xml
<CustomField>
    <fullName>InitiatingOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that initiated the creation of this Account Condition record.</description>
    <label>Initiating Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Account Conditions</relationshipLabel>
    <relationshipName>InitiatedAccountConditions</relationshipName>
    <type>Lookup</type>
</CustomField>