force-app/main/default/objects/AccountConditions__c/fields/LastConditionChange__c.field-meta.xml
<CustomField>
    <fullName>LastConditionChange__c</fullName>
    <label>Last Condition Change</label>
    <type>DateTime</type>
</CustomField>