force-app/main/default/objects/AccountConditions__c/fields/ListingRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>ListingRightAuthority__c</fullName>
    <description>Who granted the listing right; display only, never written by the click cycle.</description>
    <label>Listing Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>