force-app/main/default/objects/AccountConditions__c/fields/ListingRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>ListingRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who causes the listing lock — revocation, “ends here”, category frame or chain-head binding; blank while the own state applies.</description>
    <label>Listing Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Listing Right Capped By)</relationshipLabel>
    <relationshipName>ListingRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>