force-app/main/default/objects/AccountConditions__c/fields/OrderChannel__c.field-meta.xml
<CustomField>
    <fullName>OrderChannel__c</fullName>
    <label>Order Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>