force-app/main/default/objects/AccountConditions__c/fields/OrderChannelDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OrderChannelDiscountPct__c</fullName>
    <label>Order Channel Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>