force-app/main/default/objects/AccountConditions__c/fields/OwnAdvertisingSubsidyRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnAdvertisingSubsidyRightState__c</fullName>
    <description>Advertising subsidy (WKZ), own state — payment-related right like the rebate.</description>
    <label>Advertising Subsidy Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>