force-app/main/default/objects/AccountConditions__c/fields/OwnBaseCocaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OwnBaseCocaDiscountPct__c</fullName>
    <label>Own Base Discount Cocoa (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>