force-app/main/default/objects/AccountConditions__c/fields/OwnBaseDiscountRoastedCoffee__c.field-meta.xml
<CustomField>
    <fullName>OwnBaseDiscountRoastedCoffee__c</fullName>
    <label>Own Base Discount Roasted Coffee (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>