force-app/main/default/objects/AccountConditions__c/fields/OwnBaseOtherArticlesDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OwnBaseOtherArticlesDiscountPct__c</fullName>
    <label>Own Base Discount Other (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>