force-app/main/default/objects/AccountConditions__c/fields/OwnBaseTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OwnBaseTeaDiscountPct__c</fullName>
    <label>Own Base Discount Tea (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>