force-app/main/default/objects/AccountConditions__c/fields/OwnConditionRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnConditionRightState__c</fullName>
    <description>Condition, own state — may the account negotiate its own conditions?</description>
    <label>Condition Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>