force-app/main/default/objects/AccountConditions__c/fields/OwnIndexationRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnIndexationRightState__c</fullName>
    <description>Indexation, own state — within a chain only the condition chain head may hold it.</description>
    <label>Indexation Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>