force-app/main/default/objects/AccountConditions__c/fields/OwnListingRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnListingRightState__c</fullName>
    <description>Listing, own state — the negotiated value; blank means granted.</description>
    <label>Listing Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>