force-app/main/default/objects/AccountConditions__c/fields/OwnOrderingRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnOrderingRightState__c</fullName>
    <description>Ordering — structural base right; not shown in the component and excluded from the cascade. The only right without an effective and a causer field.</description>
    <label>Ordering Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>