force-app/main/default/objects/AccountConditions__c/fields/OwnRebateRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnRebateRightState__c</fullName>
    <description>Rebate, own state — payment-related right; payment data requires a separate legal entity, so departments never hold it.</description>
    <label>Rebate Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>