force-app/main/default/objects/AccountConditions__c/fields/OwnSamplingRightState__c.field-meta.xml
<CustomField>
    <fullName>OwnSamplingRightState__c</fullName>
    <description>Sampling, own state — goods-flow right. Departments never hold an own value: sampling is inherited from the parent, the field stays blank on their sheets.</description>
    <label>Sampling Right (Own)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightState</valueSetName>
    </valueSet>
</CustomField>