force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeCocoaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeCocoaDiscountPct__c</fullName>
    <label>Own Volume Cocoa Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>