force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeCocoaQty__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeCocoaQty__c</fullName>
    <label>Own Volume Cocoa (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>