force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeOtherProductsDiscount__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeOtherProductsDiscount__c</fullName>
    <label>Own Volume Other Products Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>