force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeOtherProductsQty__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeOtherProductsQty__c</fullName>
    <label>Own Volume Other Products (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>