force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeRoastedCoffeeDiscount__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeRoastedCoffeeDiscount__c</fullName>
    <label>Own Volume Roasted Coffee Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>