force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeRoastedCoffeeQty__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeRoastedCoffeeQty__c</fullName>
    <label>Own Volume Roasted Coffee (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>