force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeTeaDiscountPct__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeTeaDiscountPct__c</fullName>
    <label>Own Volume Tea Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>