force-app/main/default/objects/AccountConditions__c/fields/OwnVolumeTeaQty__c.field-meta.xml
<CustomField>
    <fullName>OwnVolumeTeaQty__c</fullName>
    <label>Own Volume Tea (Qty)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>