force-app/main/default/objects/AccountConditions__c/fields/ParentAccountConditions__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountConditions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account Conditions</label>
    <referenceTo>AccountConditions__c</referenceTo>
    <relationshipLabel>Direct Child Conditions</relationshipLabel>
    <relationshipName>DirectChildConditions</relationshipName>
    <type>Lookup</type>
</CustomField>