force-app/main/default/objects/AccountConditions__c/fields/RebateRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>RebateRightAuthority__c</fullName>
    <description>Authority of the rebate right; display only, never written by the click cycle.</description>
    <label>Rebate Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>