force-app/main/default/objects/AccountConditions__c/fields/RebateRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>RebateRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rebate Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Rebate Right Capped By)</relationshipLabel>
    <relationshipName>RebateRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>