force-app/main/default/objects/AccountConditions__c/fields/SamplingRightAuthority__c.field-meta.xml
<CustomField>
    <fullName>SamplingRightAuthority__c</fullName>
    <description>Authority of the sampling right; display only, never written by the click cycle.</description>
    <label>Sampling Right Authority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RightAuthority</valueSetName>
    </valueSet>
</CustomField>