force-app/main/default/objects/AccountConditions__c/fields/SamplingRightCappedBy__c.field-meta.xml
<CustomField>
    <fullName>SamplingRightCappedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Causer of the sampling lock; blank while the own state applies.</description>
    <label>Sampling Right Capped By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Conditions (Sampling Right Capped By)</relationshipLabel>
    <relationshipName>SamplingRightCappedBy</relationshipName>
    <type>Lookup</type>
</CustomField>